--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <h1 id="lib-header">Viraj's Component library</h1>
-    <p class="heading">I am attending bootcamp and I want to make a library which would be helful for my further projects to look good and consisent.</p>
+    <h1>Viraj's Component library</h1>
+    <p>I am attending bootcamp and I want to make a library which would be helful for my further projects to look good and consisent.</p>
 
     <hr>
 
@@ -24,10 +24,10 @@
     <h1>@Containers</h1>
     
     <h2>fluid container</h2>
-    <p>This is a fluid container</p>
+    <div class="container-fluid">This is a fluid container  and it will go till the end of the page </div>
 
     <h2>centered container</h2>
-    <p>This is a centerd container</p>
+    <div class="container-center">This is a centerd container and it will go till the specified width</div>
 
     <hr>
 
