--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>@Containers</h1>
     
     <h2>fluid container</h2>
-    <div class="container-fluid">This is a fluid container  and it will go till the end of the page </div>
+    <div class="container">This is a fluid container  and it will go till the end of the page </div>
 
     <h2>centered container</h2>
     <div class="container-center">This is a centerd container and it will go till the specified width</div>
@@ -33,8 +33,8 @@
 
     <h1>@links</h1>    
 
-    <a href="/">Primary links</a>
-    <a href="/">Secondary links</a>
+    <a class="link link-primary "href="/">Primary links</a>
+    <a class="link link-secondary"href="/">Secondary links</a>
 
     <hr>
 
