--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">This is a fluid container  and it will go till the end of the page </div>
 
     <h2>centered container</h2>
-    <div class="container-center">This is a centerd container and it will go till the specified width</div>
+    <div class="container container-center">This is a centerd container and it will go till the specified width</div>
 
     <hr>
 
@@ -41,22 +41,22 @@
     <h1>lists</h1>
 
     <h2>unordered lists</h2>
-<ul>
+<ul class="list-non-bullet">
     <li>item 1</li>
     <li>item 2</li>
     <li>item 3</li>
 </ul>
     <h2>unordered inline lists</h2>
-<ul>
-    <li>inline item 1</li>
-    <li>inline item 2</li>
-    <li>inline item 3</li>
+<ul class="list-non-bullet">
+    <li class="list-item-inline">inline item 1</li>
+    <li class="list-item-inline">inline item 2</li>
+    <li class="list-item-inline">inline item 3</li>
 </ul>
     <h2>reverse ordered lists</h2>    
-<ol>
+<ol reversed>
     <li>milk</li>
     <li>eggs</li>
-    <li>break<li>
+    <li>bread</li>
 </ol>        
 
     <hr>
