update:index.html

--- a/index.html
+++ b/index.html
@@ -82,27 +82,32 @@
     <hr>
 
     <h2>@header</h2>
-      <header>
-          <img src="/">
-          <h1>image inside hero</h1>
+      <header class="hero">
+          <img class="hero-img"img src="/">
+          <h1 class="hero-heading">Viraj:An Android app <span class="heading-highlight"> Developer </span> </h1>
       </header>
 
       <hr>
 
       <h2>section</h2>
-      <section>
+      <section class="section">
+          <div class="container container-center"></div> 
           <h3>white section</h3>
-          <p>This will have white section</p>
+          <p>Hey,Welcome to my portfolio...
+        </p>
       </section>
 
-    </section>
+    <section class="section ow">
     <h3>off white section</h3>
-    <p>This will have gray section</p>
+    <p>I had created a CLI app. I'll showcase it tommorrow.
+        I like to create memes.
+        I love Joker as a character in a movie 'THE SUICIDE SQUAD'. 
+        I love spending half an hour of  24 hours in a gym.</p>
 </section>
 
     <footer>
         <h2>@footer</h2>
-        <div>Some small heading inside</div>
+        <div class="footer">Some small heading inside</div>
         <ul>
             <li>socialone</li>
             <li>socialtwo</li>
