--- a/index.html
+++ b/index.html
@@ -91,27 +91,29 @@
 
       <h2>section</h2>
       <section class="section">
-          <div class="container container-center"></div> 
+          <div class="container container-center"> 
           <h3>white section</h3>
           <p>Hey,Welcome to my portfolio...
-        </p>
+        </p></div>
       </section>
 
     <section class="section ow">
     <h3>off white section</h3>
+    <div class="container container-center">
     <p>I had created a CLI app. I'll showcase it tommorrow.
         I like to create memes.
         I love Joker as a character in a movie 'THE SUICIDE SQUAD'. 
-        I love spending half an hour of  24 hours in a gym.</p>
+        I love spending half an hour of  24 hours in a gym.</p></div>
 </section>
 
     <footer>
         <h2>@footer</h2>
-        <div class="footer">Some small heading inside</div>
-        <ul>
-            <li>socialone</li>
-            <li>socialtwo</li>
-            <li>socialthree</li>
+        <footer class="footer">
+        <div class="footer-header">Some small heading inside</div>
+        <ul class="social-links list-non-bullet">
+            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28">socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+            <li  class="list-item-inline"><a class="link" href="/">socialthree</a></li>
         </ul>
     </footer>
     </body>
