update:components.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <h2>@header</h2>
       <header class="hero">
-          <img class="images/hero.svg"img src="/">
+          <img class="hero-img"img src="images/hero.svg">
           <h1 class="hero-heading">Viraj:An Android app <span class="heading-highlight"> Developer </span> </h1>
       </header>
 
