--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,11 @@
         <div class="nav-brand">IAMDEVELOPER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active"href="/">Home</a>    
+                <a class="link"href="/">Home</a>    
             </li>
 
             <li class="list-item-inline">
-                <a class="link-active" href="/projects.html">Projects</a>    
+                <a class="link link-active" href="/projects.html">Projects</a>    
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/blogs.html">Blogs</a>    
