--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </li>
 
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>    
+                <a class="link-active" href="/">Projects</a>    
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Blogs</a>    
+                <a class="link-active" href="/">Blogs</a>    
             </li>
         
         </ul>
