update projects link

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="nav-brand">IAMDEVELOPER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active"href="/">Home</a>    
+                <a class="link link-active "href="/">Home</a>    
             </li>
 
             <li class="list-item-inline">
-                <a class="link-active" href="/">Projects</a>    
+                <a class=" link " href="/">Projects</a>    
             </li>
             <li class="list-item-inline">
-                <a class="link-active" href="/">Blogs</a>    
+                <a class="link " href="/">Blogs</a>    
             </li>
         
         </ul>
@@ -48,7 +48,7 @@
         <div class="container container-center">
         <p>
         I like to showcase my work and thus,you can see my projects hosted online</p></div>
-        <a class="link link-primary "href="/projects.html">See Projects</a>
+        <a class="link link-primary"href="/projects.html">See Projects</a>
     </section>
     
     <section class="section">
