--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
                 <a class="link link-active" href="/projects.html">Projects</a>    
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>    
+                <a class="link " href="/blogs.html">Blogs</a>    
             </li>
         
         </ul>
@@ -30,14 +30,14 @@
 
     <ul reversed>
         <li>
-            <h1>How well do know me ?</h1>
-            <small>November,2020</small>
+            <h1>How well do know Kaku Gang ?</h1>
+  Play Game</a>
+        </li>            <small>November,2020</small>
             <p>A CLI app built with<strong> NodeJS </strong>try it now.</p>
         
-            <a class="link link-primary" href="/">In Process</a>
-        </li>
-
-    </ul>
+            <a class="link link-primary" href="src=https://repl.run/@VirajJadhav/ENDGAME?lite=true">
+            Play Game
+        </a></ul>
 
 </body>
 </html>
