--- a/blogs.html
+++ b/blogs.html
@@ -15,10 +15,10 @@
             </li>
 
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>    
+                <a class="link link-active" href="/blogs.html">Blogs</a>    
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Blogs</a>    
+                <a class="link link-active" href="/projects.html">Projects</a>    
             </li>
         
         </ul>
