--- a/blogs.html
+++ b/blogs.html
@@ -11,14 +11,14 @@
         <div class="nav-brand">IAMDEVELOPER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link "href="/">Home</a>    
+                <a class="link "href="/index.html">Home</a>    
             </li>
 
             <li class="list-item-inline">
-                <a class="link link-active" href="/blogs.html">Blogs</a>    
+                <a class="link" href="/projects.html">Projects</a>    
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/projects.html">Projects</a>    
+                <a class="link link-active" href="/blogs.html">Blogs</a>    
             </li>
         
         </ul>
