update project link

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
         </li>            <small>November,2020</small>
             <p>A CLI app built with<strong> NodeJS </strong>try it now.</p>
         
-            <a class="link link-primary" href="src=https://repl.run/@VirajJadhav/ENDGAME?lite=true">
+            <a class="link link-primary" href="https://repl.it/@VirajJadhav/ENDGAME#index.js">
             Play Game
         </a></ul>
 
