--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Viraj Jadhav</title>
+    <link rel="shortcut icon" type="image.png" href="img/favicon.png">
     <link href="styles.css"rel="stylesheet"/>
 </head>
 <body>
