--- a/blogs.html
+++ b/blogs.html
@@ -28,5 +28,25 @@
         <h1 class="hero-heading">My <span class="heading-highlight"> Blogs </span> </h1>
         <h2>Sorry,I'm working on it</h2>
     </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer class="footer">
+        <div class="footer-header">Social Media</div>
+        <ul class="social-links list-non-bullet">
+            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28" target="_blank">GitHub</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" target="_blank">LinkedIn</a></li>
+        </ul>
+
 </body>
 </html>
