--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <footer class="footer">
         <div class="footer-header">Social Media</div>
         <ul class="social-links list-non-bullet">
-            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28">GitHub</a></li>
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/">LinkedIn</a></li>
+            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28" target="_blank">GitHub</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" target="_blank">LinkedIn</a></li>
         </ul>
 
 
