--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </li>
 
             <li class="list-item-inline">
-                <a class=" link " href="projects.html">Projects</a>    
+                <a class=" link "} href="projects.html">Projects</a>    
             </li>
             <li class="list-item-inline">
                 <a class="link " href="blogs.html">Blogs</a>    
@@ -33,7 +33,8 @@
     <section class="section ow">
         <h3>Technologies</h3>
         <div class="container container-center">
-        <p>I'm familiar with HTML5,CSS3,Git,Javascript,C++,Repl.it and Web Hosting</p></div>
+        <p>I'm familiar with HTML5,CSS3,Git,Javascript,
+            C++,Repl.it and Web Hosting</p></div>
     </section>
     
     <section class="section">
