--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </li>
 
             <li class="list-item-inline">
-                <a class=" link "} href="projects.html">Projects</a>    
+                <a class=" link " href="projects.html">Projects</a>    
             </li>
             <li class="list-item-inline">
                 <a class="link " href="blogs.html">Blogs</a>    
@@ -58,7 +58,7 @@
         <div class="container container-center">
         <p>
         I'm also writing some technical and non technical blogs. I like to document my journey of learning.</p></div>
-        <a class="link link-primary "href="/blogs.html">Visit Blogs</a>
+        <a class="link link-secondary "href="/blogs.html">Visit Blogs</a>
     </section>
 
     <footer class="footer">
