add footer icons

--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
         <a class="link link-secondary "href="/blogs.html">Visit Blogs</a>
     </section>
 
+
     <footer class="footer">
         <div class="footer-header">Social Media</div>
         <ul class="social-links list-non-bullet">
-            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28" target="_blank">GitHub</a></li>
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" target="_blank">LinkedIn</a></li>
+            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28" target="_blank">
+                <img src="images/github.png"></a></li>
+
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" target="_blank">
+                <img src="images/linkedin.png"></a></li>
+
+            <li class="list-item-inline"><a class="link" href = "mailto:viraj28j@gmail.com">
+                <img src="images/gmail.png">
+            </a></li>
         </ul>
 
 
