--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                     </li> <small>December,2020</small>
                         <p>A Web app built in<strong> Vanilla JS </strong>using Fun Translation API try it now.</p>
                     
-                        <a class="link link-primary" href="https://minionlangtranslate.netlify.app/" >
+                        <a class="link link-primary" href="https://minionlangtranslate.netlify.app" target="_blank">
                         Play Game </a>
                         
                         <a class="link link-secondary" href="https://github.com/Virajj28/Banana-Speak" target="_blank">
@@ -78,10 +78,10 @@
     <footer class="footer">
         <div class="footer-header">Social Media</div>
         <ul class="social-links list-non-bullet">
-            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28/">
+            <li  class="list-item-inline"><a class="link" href="https://github.com/Virajj28/" target="_blank">
                 <img src="images/github.png"></a></li>
 
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" >
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7" target="_blank">
                 <img src="images/linkedin.png"></a></li>
 
             <li class="list-item-inline"><a class="link" href= "mailto:viraj28j@gmail.com">
