--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
             <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/viraj-jadhav-b717121b7/" target="_blank">
                 <img src="images/linkedin.png"></a></li>
 
-            <li class="list-item-inline"><a class="link" href = "mailto:viraj28j@gmail.com">
+            <li class="list-item-inline"><a class="link" href = "mailto:viraj28j@gmail.com" target="_blank">
                 <img src="images/gmail.png">
             </a></li>
+           
         </ul>
 
 
