--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>Technologies</h3>
         <div class="container container-center">
         <p>I'm familiar with HTML5, CSS3, Bootstrap, TailwindCSS, Javascript, ReactJS,
-           ,NextJS, Shopify(Liquid), Git and Web Hosting</p></div>
+           ,NextJS, Shopify(Liquid), Git & Github and Web Hosting.</p></div>
     </section>
     
     <section class="section">
