--- a/blogs.html
+++ b/blogs.html
@@ -30,6 +30,13 @@
     
         <ul>
             <li>
+                <h1>How to Contribute In Hactoberfest ?</h1>
+                <p>
+                    <strong>Writing on it will be published soon. </strong>
+                 </p>
+            </li>
+
+            <li>
                 <h1>GitHub Student Developer Pack — By GitHub Education.</h1>
             </li>
                  <small>22nd January,2021</small>
