--- a/index.html
+++ b/index.html
@@ -47,16 +47,21 @@
     <section class="section ow">
         <h3>Projects</h3>
         <div class="container container-center">
-        <p>
-        I'd like to showcase my work and thus, you can see my projects hosted online.</p></div>
+            <p>
+                I'd like to showcase my work and thus, you can see my projects hosted online.
+            </p>
+        </div>
         <a class="link link-primary"href="/projects.html">See Projects</a>
     </section>
     
     <section class="section">
         <h3>Blogs</h3>
         <div class="container container-center">
-        <p>
-        When a need to change my mind I write some technical and non technical blogs. I like to document my journey of learning.</p></div>
+            <p>
+                When a need to change my mind I write some technical and non technical blogs. 
+                As I'd like to document my journey of learning.
+            </p>
+        </div>
         <a class="link link-secondary "href="/blogs.html">Visit Blogs</a>
     </section>
 
