--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="section ow">
         <h3>Technologies</h3>
         <div class="container container-center">
-        <p>I'm familiar with HTML5, CSS3, Bootstrap, TailwindCSS, Javascript, ReactJS,
-           ,NextJS, Shopify(Liquid), Git & Github and Web Hosting.</p></div>
+        <p>I'm familiar with HTML5, CSS3, Bootstrap, TailwindCSS, Material UI, Javascript,
+            ReactJS, NextJS, Shopify(Liquid), Git & GitHub.</p></div>
     </section>
     
     <section class="section">
