--- a/blogs.html
+++ b/blogs.html
@@ -32,7 +32,7 @@
             <li>
                 <h1>How to Contribute In Hactoberfest ?</h1>
                 <p>
-                    <strong>Writing on it will be published soon. </strong>
+                    <strong>Writing on it. Till then stay tuned! </strong>
                  </p>
             </li>
 
