--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,8 @@
                        <strong>Project in Progress...</strong>
                     <!-- </a> -->
            
-              <!-- <a class="link link-secondary" href="/" target="_blank">
-                        View Source Code</a>  -->
+              <a class="link link-secondary" href="https://github.com/Virajj28/Spotify-NextJS" target="_blank">
+                        View Source Code</a> 
          
         <li>
             <h1>How's It!</h1>
