--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>Technologies</h3>
         <div class="container container-center">
         <p>I'm familiar with HTML5, CSS3, Bootstrap, TailwindCSS, Material UI, Javascript,
-            ReactJS, NextJS, Shopify(Liquid), Git & GitHub.</p></div>
+            ReactJS, NextJS, Shopify(Liquid), JWT Authentication, Git & GitHub.</p></div>
     </section>
     
     <section class="section">
