fix skills & title

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
     <header class="hero">
         <img class="hero-img"img src="images/hero.svg">
-        <h1 class="hero-heading">Viraj: A Frontend <span class="heading-highlight"> Web Developer </span> </h1>
+        <h1 class="hero-heading">Viraj : A Frontend <span class="heading-highlight">Developer </span> </h1>
     </header>
 
     <section class="section ow">
         <h3>Technologies</h3>
         <div class="container container-center">
         <p>I'm familiar with HTML5, CSS3, Bootstrap, TailwindCSS, Material UI, Javascript,
-            ReactJS, NextJS, Shopify(Liquid), JWT Authentication, Git & GitHub.</p></div>
+            ReactJS, NextJS, Shopify(Liquid), Git & GitHub.</p></div>
     </section>
     
     <section class="section">
