--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
     
         <ul>
             <li>
-                <h1>How to Contribute In Hactoberfest ?</h1>
+                <h1>How to Contribute In Hacktoberfest ?</h1>
                 <p>
                     <strong>Writing on it. Till then stay tuned! </strong>
                  </p>
