--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             <h1>Slack Clone</h1>
                     
         </li> <small>December,2021</small>
-              <p>A Web app built on<strong> TailwindCSS, NextJS </strong> with functionalities such as Login, Real-Time Messaging into organization</p>
+              <p>A Full-Stack Web app built on<strong> TailwindCSS, NextJS, NextAuth </strong> with user functionality Login, Real-Time Messaging into organization</p>
                            
               <!-- <a class="link link-primary" href="" target="_blank"> -->
                         <!-- Live Demo  -->
