--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                     <!-- </a> -->
            
               <a class="link link-secondary" href="https://github.com/Virajj28/" target="_blank">
-                        View Source Code</a>
+                        Project to be Started</a>
 
         <li>
             <h1>Spotify Clone</h1>
