update slack repo link

--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,8 @@
                        <strong>Project in Progress...</strong>
                     <!-- </a> -->
            
-              <a class="link link-secondary" href="https://github.com/Virajj28/" target="_blank">
-                        Project to be Started</a>
+              <a class="link link-secondary" href="https://github.com/Virajj28/Slack-UI-clone" target="_blank">
+                        View Source Code</a>
 
         <li>
             <h1>Spotify Clone</h1>
