--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h3>About Me</h3>
         <div class="container container-center">
         <p>I am a Coding Enthusiast gaining more knowledge into Web Development.
-            Currently working as A Developer at company based in Mumbai where working on customers build growth products while leveraging data and the web.
+            Currently working (even on weekends) as A Developer at company based in Mumbai where working on customers build growth products while leveraging data and the web.
             Apart from code I like to create memes.
             <p>Fun fact⚡: I'm a guy who lift weights when not coding.</p></p></div>
     </section>
