--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
         </li> <small>July,2021</small>
               <p>A Web app built with<strong> ReactJS </strong>using MemeFlip Api to create and<br> download memes by selecting desired templates.</p>
                            
-              <a class="link link-primary" href="https://gu44i.csb.app/" target="_blank">
+              <a class="link link-primary" href="https://meme-generator1-virajj28.vercel.app/" target="_blank">
                         Live Demo </a>
            
               <a class="link link-secondary" href="https://github.com/Virajj28/Meme-generator" target="_blank">
